=========================================


=========================================
	Update: Feb 18 2017
=========================================
		Removed the 6th s.xtf as it would stop the exploit from loading on my v1.6
		( 5 files work fine, so im not taking ay chances, so the 6th s gone )
		Updated the dashboard xml to have the recent menu enabled by default
		( you press the (X) button )


=========================================
	Update: Feb 16 2017
=========================================
		Updated the UX internal splash screen, ie, fixed the spacing of the letters
		( would seem the font likes to have inconsistent letter spacing :/ )
		Had to update all the xbe signatures in "Xbox Softmod Tool Kit"
		Fixed some grammar and spelling


=========================================
	Update: Feb 15 2017
=========================================
		Re-branded the softmod from 2016 Softmodding Tool to Xbox Softmodding Tool, as I'm still working on it in 2017 :/
		Changed version number to v1.1, since there have been a lot of changes since the v1.0 release and also the re-branding.
		Rearranged the System menu in UnleashX
		Updated Chimp 261812, this should be it done and dusted
		( check my github for the changes )
		Added XBP Table Writer to the "Advanced Apps" menu
		Updated the "Free FTP Programs.txt"
		Added a new batch file to the softmod zip when compiling and the tools folder.
		( its used to allow FTPing to the Xbox via Windows Explorer )


=========================================
	Update: Feb 13 2017
=========================================
		Rearranged the internals of the UnleashX Build 584 xbe file
		( I moved the internals about to accommodate some changes I made )
		Updated the "2016 Softmod Tool Kit" to resign the above edit and resign all edited xbe files now.
		New default splash for unleashx
		( this isn't skin related its built into unleashx )
		Updated all variants of UX uses in the softmod to the new modded version.