@@ -17,6 +17,7 @@ But here is what I have changed, that I can remember.
 		( 5 files work fine, so im not taking ay chances, so the 6th s gone )
 		Updated the dashboard xml to have the recent menu enabled by default
 		( you press the (X) button )
+		Added a Clear recent list button to the settings menu.
 
 
 =========================================
